# console

./: .gitignore  AGENTS.md  BACKEND_FIX.md  BACKEND_IMPL.md  CLAUDE.md  CODEX.md  CURSOR_RULES.md  Cargo.toml  INSTALL_SYSTEM.md  Makefile  README.md  SYNC_PHASE2.md  go.mod  install.sh  pnpm-lock.yaml  pnpm-workspace.yaml  task.md
.cursor/rules/: project.mdc
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/android/: README.md
apps/mobile/ios/: README.md
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: index.html  pnpm-lock.yaml
apps/web/src/: App.tsx  api.ts  types.ts
cmd/console/: main.go
crates/cloudcode-contracts/: Cargo.toml
crates/cloudcode-contracts/src/: agent_sources.rs  common.rs  employees.rs  lib.rs  mcp.rs  prompts.rs  providers.rs  remote_agents.rs  sessions.rs  skills.rs  terminal.rs  threads.rs
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: AppBadgeList.tsx  EmptyState.tsx  FormFields.tsx  Modal.tsx  ProposalCard.tsx  SecretField.tsx  ThemeModeToggle.tsx  UpdateBanner.tsx
dashboard/src/contexts/: TaskContext.tsx
dashboard/src/hooks/: useAgentSources.ts  useAgents.ts  useTask.ts
dashboard/src/mock/: data.ts
dashboard/src/pages/: AgentsPage.tsx  ConfigSyncPage.tsx  Dashboard.tsx  EmployeesPage.tsx  LogsPage.tsx  McpPage.tsx  NewThreadPage.tsx  NotFound.tsx  ProjectOverviewPage.tsx  PromptsPage.tsx  ProviderPage.tsx  SettingsPage.tsx  SkillPage.tsx  TaskBoardPage.tsx  TerminalPage.tsx  (+2 more)
docs/: ADAPTER_MODEL.md  AGENT_MANAGEMENT.md  AGENT_RUNTIME.md  ARCHITECTURE.md  CLI.md  DESKTOP.md  DEVELOPMENT.md  EMPLOYEE_MANAGEMENT.md  GOALS.md  IMPLEMENTATION_ASSUMPTIONS.md  MOBILE.md  OPENCLAW_INTEGRATION.md  ROADMAP.md  SERVER_AND_CREDENTIAL_ARCHITECTURE.md  SERVER_AND_CREDENTIAL_DELIVERY_REPORT.md  SERVER_AND_CREDENTIAL_DESKTOP_INTEGRATION_REPORT.md  SERVER_AND_CREDENTIAL_IMPLEMENTATION_PLAN.md  STORAGE.md  TECH_STACK.md  TERMINAL_RUNTIME.md  THREAD_RUNTIME_UI_PLAN.md  WEB_UI.md  WORKER_MODEL.md  desktop-server-split-blueprint.md  ui-refactor-plan.md
docs/decisions/: 0001-local-file-state.md  0002-sse-streaming-transport.md  0003-worker-adapter-boundary.md  0004-persistent-terminal-sessions.md
docs/testing/: README.md  adapter-validation-spec.md  config-sync-validation-spec.md  local-validation-spec.md  script-surface.md  test-strategy.md  validation-report-template.md
internal/api/: handlers.go  response.go  server.go
internal/cli/: commands.go
internal/config/: paths.go
internal/run/: manager.go
internal/state/: files.go  models.go  store.go
internal/stream/: sse.go
internal/worker/: adapters.go  scan.go  service.go
internal/workspace/: service.go
src/: lib.rs  main.rs
src/adapters/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs
src/api/: mod.rs  routes.rs  sse.rs  terminal.rs  threads.rs
src/cli/: doctor.rs  init.rs  mod.rs  rollback.rs  scan.rs  start.rs  uninstall.rs  upgrade.rs
src/models/: credential.rs  mod.rs  os_detection.rs  server.rs
src/runtime/: errors.rs  gateway.rs  manager.rs  mod.rs  models.rs  registry.rs  stream.rs
src/services/: agent_registry.rs  agent_source.rs  backup.rs  employee.rs  employee_dispatch.rs  logs.rs  mcp.rs  mod.rs  model_assignment.rs  openclaw.rs  prompt.rs  proposal.rs  provider.rs  remote_agent.rs  self_update.rs  session.rs  session_stream.rs  settings.rs  skill.rs  skill_sync.rs  task_queue.rs  terminal.rs  thread.rs  version.rs
src/storage/: mod.rs
src/sync/: mod.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
(+150 files in other folders)
