[workspace]
members = [
  ".",
  "apps/server",
  "apps/desktop/src-tauri",
  "crates/cloudcode-contracts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package]
name = "cloudcode"
version.workspace = true
edition.workspace = true
description = "Local AI CLI unified management platform"

[[bin]]
name = "cloudcode"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
async-stream = "0.3"
futures = "0.3"
base64 = "0.22"
async-trait = "0.1"
http-body-util = "0.1"
hyper = "1"
portable-pty = "0.8"
rand = "0.8"
tokio-tungstenite = { version = "0.21", features = ["connect", "handshake", "stream"] }
futures-util = "0.3"
url = "2"
cloudcode-contracts = { path = "crates/cloudcode-contracts" }
