[package]
name = "cloudcode-desktop-shell"
version.workspace = true
edition.workspace = true
description = "CloudCode desktop shell"
default-run = "CloudCode"

[[bin]]
name = "CloudCode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
cloudcode = { path = "../../.." }
cloudcode-contracts = { path = "../../../crates/cloudcode-contracts" }
anyhow = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", features = [
  "NSButton",
  "NSButtonCell",
  "NSControl",
  "NSImage",
  "NSLayoutConstraint",
  "NSResponder",
  "NSTitlebarAccessoryViewController",
  "NSView",
  "NSViewController",
  "NSWindow",
] }
objc2-foundation = { version = "0.3.2", features = [
  "NSGeometry",
  "NSObject",
  "NSString",
  "NSThread",
] }
